--- a/index.html
+++ b/index.html
@@ -1,18 +1,37 @@
 <!DOCTYPE html>
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="assets/css/main.css">
-    <script src="assets/js/main.js"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" type="text/css" href="assets/css/main.css" />
+  <script src="assets/js/main.js"></script>
 </head>
 <body onload="onload()">
-    <div id="menu">
-        <a class="a active" >Character</a>
-        <a class="a" >Inventory</a>
-        <a class="a" >Spells</a>
-        <a class="a" >Appearance</a>
-        <a class="a" >Blank</a>
+  <div id="menu">
+    <a class="a active" onclick="showCharacterSheet()">Character</a>
+    <a class="a" onclick="showInventory()">Inventory</a>
+    <a class="a" onclick="showSpells()">Spells</a>
+    <a class="a" onclick="showAppearance()">Appearance</a>
+    <a class="a" onclick="showBlank()">Blank</a>
+  </div>
+  <div class="overlay">
+    <div id="chSh">
+      <img
+        src="assets/images/DnD_5E_CharacterSheet_FormFillable-1.png"
+        id="Sheet"
+      />
     </div>
-    <div class="overlay">
-            <img src="assets/images/DnD_5E_CharacterSheet_FormFillable-1.png" id="Sheet">
+    <div id="inv" style="display: none"></div>
+    <div id="spell" style="display: none">
+      <img
+        src="assets/images/DnD_5E_CharacterSheet_FormFillable-3.png"
+        id="Sheet"
+      />
     </div>
+    <div id="appe" style="display: none">
+      <img
+        src="assets/images/DnD_5E_CharacterSheet_FormFillable-2.png"
+        id="Sheet"
+      />
+    </div>
+    <div id="blank" style="display: none"></div>
+  </div>
 </body>
