--- a/index.html
+++ b/index.html
@@ -17,16 +17,21 @@
       <img
         src="assets/images/DnD_5E_CharacterSheet_FormFillable-1.png"
         class="Sheet"
+        draggable="false"
       />
       <form id="chShForm" autocomplete="off">
-        <div class="top">
-          <input id="charName" type="text" name="charName" required />
-          <input type="text" name="class" required />
-          <input type="text" name="background" required />
-          <input type="text" name="name" />
-          <input type="text" name="race" required />
-          <input type="text" name="alignment" />
-          <input type="text" name="experience" />
+        <div class="top-left">
+          <input type="text" id="charName" name="charName" required />
+        </div>
+        <div class="top-top-right">
+          <input type="text" id="class" required />
+          <input type="text" id="background" required />
+          <input type="text" id="name" />
+        </div>
+        <div class="top-bottom-right">
+          <input type="text" id="race" required />
+          <input type="text" id="alignment" />
+          <input type="text" id="experience" />
         </div>
       </form>
     </div>
@@ -37,6 +42,7 @@
       <img
         src="assets/images/DnD_5E_CharacterSheet_FormFillable-3.png"
         class="Sheet"
+        draggable="false"
       />
     </div>
 
@@ -44,6 +50,7 @@
       <img
         src="assets/images/DnD_5E_CharacterSheet_FormFillable-2.png"
         class="Sheet"
+        draggable="false"
       />
     </div>
 
